hotfix: major overflow bug preventing all scrolling

--- a/stylish.css
+++ b/stylish.css
@@ -4,7 +4,6 @@ html {
 
 body {
 	background-color: #eeeeee;
-	overflow: hidden;
 }
 
 div.container {
